# routed-turboquant

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_vs_turbovec.py  faiss_baselines.py
examples/: ablation.rs  bench_500k.rs  bench_boundary.rs  bench_clustered.rs  bench_final.rs  bench_qjl.rs  bench_real_99k.rs  bench_real_data.rs  bench_rerank.rs  bench_scale.rs  bench_v1_tuned.rs  bench_v2.rs  diagnose.rs  diagnose_multi.rs  quick_bench.rs
paper/: paper.md
python/routed_turboquant/: __init__.py
src/: index.rs  index_v2.rs  kmeans.rs  lib.rs  python.rs  qjl.rs
