[package]
name = "routed-turboquant"
version = "0.1.0"
edition = "2021"
authors = ["Raghavender Reddy Grudhanti"]
description = "IVF-style float routing on top of TurboQuant scoring. Sublinear search with near-lossless recall."
license = "MIT"
repository = "https://github.com/raghavenderreddygrudhanti/routed-turboquant"

[lib]
name = "routed_turboquant"
crate-type = ["rlib"]

[dependencies]
turbovec = { path = "../turbovec/turbovec" }
rand = "0.8"
rayon = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", default-features = false, features = ["system"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
