[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "routed-turboquant"
version = "0.1.0"
description = "IVF-style float routing on top of TurboQuant SIMD scoring. Sublinear search, near-lossless recall."
authors = [{name = "Raghavender Reddy Grudhanti"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest", "sentence-transformers", "faiss-cpu", "turbovec"]
bench = ["turbovec", "faiss-cpu", "matplotlib"]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "routed_turboquant._core"
